プラグインローダのパスURL変換処理を訂正